update portifolio and about

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="img/favicon.png" type="image/png">
-	<title>About Us</title>
+	<title>Sobre JMulungo</title>
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css">
 	<link rel="stylesheet" href="vendors/linericon/style.css">
@@ -82,14 +82,14 @@
 							Saiba mais sobre <br>
 							mim</h2>
 						<p>
-							Jacinto F. Mulungo , Programador e Técnico de Suporte Informático formado no Institito Industrial e de Computação Armando E. Guebuza, jovem muito apoixonado pelas Tecnologias de Informação e Comunicação, e interresado em criar uma carreira nesta area da Informática .
+							Jacinto F. Mulungo , Programador e Técnico de Suporte Informático formado no Institito Industrial e de Computação Armando E. Guebuza,tendo me destacado como melhor aluno do curso  nos anos 2017-2019. Sou um jovem muito apoixonado pelas Tecnologias de Informação e Comunicação, e interresado em criar uma carreira nesta área da Informática .
 						</p>
-						<p>Como parte integrante do meu curso tive um estagio no Ministerio de Ciência e Tecnologia, Ensino Superior e Técnico Profissional, onde desempenhava papel de  Programador e tecnico de Suporte IT. Recentemente passei pela AFroMark Digital, empresa ligada a markentig digital e publicidade onde eraresposavel por criação de sites e gestão de redes sociais do clientes. 
+						<p>Como parte integrante do meu curso tive um estágio no Ministerio de Ciência e Tecnologia, Ensino Superior e Técnico Profissional, onde desempenhava papel de  Programador e tecnico de Suporte IT. Recentemente passei pela AFroMark Digital, empresa ligada a markentig digital e publicidade onde era resposavel pela criação de sites e gestão de redes sociais do clientes. 
 							
 						</p>
 						<p>Já estive envolvido em vários projectos colectivos como tambem pessoais, em destaque os Sistema de Gestão de Obras - SGOS, Sistema de Gestão Bibliotecaria, Sistema de Gestão Escolar - KUBALISSA, Sistema de Gestão Stock e Vendas </p>
 
-						<a class="primary_btn" href="#"><span>Baixar CV</span></a>
+						<a class="primary_btn" href="JMulungo_xvii-CV_PT-19-10-20-editado.pdf"><span>Baixar CV</span></a>
 					</div>
 				</div>
             </div>
