--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
 							Saiba mais sobre <br>
 							mim</h2>
 						<p>
-							Jacinto F. Mulungo , Programador e Técnico de Suporte Informático formado no Institito Industrial e de Computação Armando E. Guebuza, jovem muito apoixonado pelas Tecnologias de Informação e Comunicação, e interresado em criar uma carreira nesta area da Informática .
+							Jacinto F. Mulungo , Programador e Técnico de Suporte Informático formado no Institito Industrial e de Computação Armando E. Guebuza, tendo me destacado como melhor aluno do curso  nos anos 2017-2019. Sou um jovem muito apoixonado pelas Tecnologias de Informação e Comunicação, e interresado em criar uma carreira nesta área da Informática .
 						</p>
-						<p>Como parte integrante do meu curso tive um estagio no Ministerio de Ciência e Tecnologia, Ensino Superior e Técnico Profissional, onde desempenhava papel de  Programador e tecnico de Suporte IT. Recentemente passei pela AFroMark Digital, empresa ligada a markentig digital e publicidade onde eraresposavel por criação de sites e gestão de redes sociais do clientes. 
+						<p>Como parte integrante do meu curso tive um estágio no Ministerio de Ciência e Tecnologia, Ensino Superior e Técnico Profissional, onde desempenhava papel de  Programador e tecnico de Suporte IT. Recentemente passei pela AFroMark Digital, empresa ligada a markentig digital e publicidade onde era resposavel pela criação de sites e gestão de redes sociais do clientes. 
 							
 						</p>
 						<p>Já estive envolvido em vários projectos colectivos como tambem pessoais, em destaque os Sistema de Gestão de Obras - SGOS, Sistema de Gestão Bibliotecaria, Sistema de Gestão Escolar - KUBALISSA, Sistema de Gestão Stock e Vendas </p>
@@ -176,7 +176,7 @@
 					<div class="feature_item">
 						<img src="img/services/s4.png" alt="">
 						<h4>Supote IT </h4>
-						<p>Creeping for female light years that lesser can't evening heaven isn't bearing tree</p>
+						<p>Suporte Tecnico em Tecnonlogia de Informação e comunicação</p>
 					</div>
 				</div>
 				
@@ -237,7 +237,7 @@
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">Sistema de Gestão de Obras - MCTESTP</a></h4>
+								<h4><a href="portfolio-details-obras.html">Sistema de Gestão de Obras - MCTESTP</a></h4>
 								<p>Sistema de Gestão - PHP, Framework Laravel & MySQL</p>
 							</div>
 						</div>
@@ -254,7 +254,7 @@
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">DSA Consultant & Advisory</a></h4>
+								<h4><a href="">DSA Consultant & Advisory</a></h4>
 								<p>DSA Website - Resposinve Design Website</p>
 							</div>
 						</div>
@@ -271,7 +271,7 @@
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">HS - Homens de Segurança</a></h4>
+								<h4><a href="">HS - Homens de Segurança</a></h4>
 								<p>HS Website - Resposinve Design Website</p>
 							</div>
 						</div>
@@ -288,7 +288,7 @@
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">Sistema de Gestão Financeira</a></h4>
+								<h4><a href="portfolio-details-financeiro.html">Sistema de Gestão Financeira</a></h4>
 								<p>Sistema de Gestão - PHP & MySQL</p>
 							</div>
 						</div>
@@ -305,7 +305,7 @@
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">AFroMark Digital</a></h4>
+								<h4><a href="">AFroMark Digital</a></h4>
 								<p>AFroMark Website - Resposinve Design Website</p>
 							</div>
 						</div>
@@ -313,34 +313,34 @@
 					<div class="col-lg-4 col-md-6 all upcoming following">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/escolar-login.PNG" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/p7.jpg" class="img-gal">
+								<a href="img/portfolio/escolar-login.PNG" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">green heaven</a></h4>
-								<p>Animated, portfolio</p>
+								<h4><a href="portfolio-details-escolar.html">Sistema de Gestão Escolar</a></h4>
+								<p>Sistema de Gestão - PHP & MySQL</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 all following">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/p8.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/Screenshot_20201025-235007-1.jpg" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/p8.jpg" class="img-gal">
+								<a href="img/portfolio/Screenshot_20201025-235007-1.jpg" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
 								</a>
 							</div>
 							<div class="short_info">
-								<h4>fly male</h4>
-								<p>Animated, portfolio</p>
+								<h4>Website da Birdbyte</h4>
+								<p>Birdbyte- Resposinve Design Website</p>
 							</div>
 						</div>
 					</div>
@@ -356,7 +356,7 @@
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">Logotipo da AFroMark</a></h4>
+								<h4><a>Logotipo da AFroMark</a></h4>
 								<p>Design Gráfico</p>
 							</div>
 						</div>
