--- a/portfolio-details-escolar.html
+++ b/portfolio-details-escolar.html
@@ -60,7 +60,7 @@
                     <div class="page_link">
                         <a href="index.html">Home</a>
                         <a href="portfolio.html">Portfolio</a>
-                        <a href="portfolio-details.html">Portfolio Sistema de Gestão Escolar</a>
+                        <a href="portfolio-details.html">Sistema de Gestão Escolar</a>
                     </div>
                 </div>
             </div>
@@ -75,18 +75,17 @@
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="left_img">
-                            <img class="img-fluid" src="img/portfolio/portfolio-details.jpg" alt="">
+                            <img class="img-fluid" src="img/portfolio/escolar-home.PNG" alt="">
                         </div>
                     </div>
                     <div class="offset-lg-1 col-lg-5">
                         <div class="portfolio_right_text mt-30">
                             <h4 class="text-uppercase">Sistema de Gestão Escolar</h4>
                             <p>
-                                O sistema de  Gestão Escolar é um sistema web densevolvido  na linguagem PHP, e base de dados MYSQL, o principal objectivo é controle do processo da matricula e dos pagamentos das mensalidades dos alunos.  o sistema integra tambem o controle de usuarios e emissao de relatorios tornando processos mais eficais  e trazendo beneficios ao alunos  e para  escola
+                                O sistema de  Gestão Escolar é um sistema web densevolvido  na linguagem PHP, e base de dados MYSQL, o principal objectivo deste sistema é controle do processo da matricula e dos pagamentos das mensalidades dos alunos.  o sistema integra tambem o controle de usuários e emissão de relatórios tornando processos mais eficais  e trazendo benefícios ao alunos e para  escola
                             </p>
                             <ul class="list">
-                                <li><span>Rating</span>: <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i
-                                        class="fa fa-star"></i></li>
+                                 
                                         <li><span>Linguagem</span>: PHP</li>
                                         <li><span>Base de dados</span>: MySQL</li>
                                         <li><span>Outros</span>:  JS, CSS, e Bootstrap </li>
