--- a/portfolio.html
+++ b/portfolio.html
@@ -72,8 +72,8 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="main_title text-left">
-                        <h2>quality work <br>
-                            Recently done project </h2>
+						<h2>Portifolio <br>
+							Veje aqui alguns Trabalhos ... </h2>
                     </div>
                 </div>
             </div>
@@ -87,158 +87,158 @@
                 </ul>
             </div>
     
-            <div class="filters-content">
+			<div class="filters-content">
 				<div class="row portfolio-grid justify-content-center">
 					<div class="col-lg-4 col-md-6 all latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/p1.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/biblioteca_home.PNG" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/p1.jpg" class="img-gal">
+								<a href="img/portfolio/biblioteca_home.PNG" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">minimal design</a></h4>
-								<p>Animated, portfolio</p>
+								<h4><a href="portfolio-details-biblioteca.html">Sistema de Gestão Bibliotecaria</a></h4>
+								<p>Sistema de Gestão - PHP & MySQL</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 all popular">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/p2.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/login-obras.PNG" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/p2.jpg" class="img-gal">
+								<a href="img/portfolio/obras-home.PNG" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">Paint wall</a></h4>
-								<p>Animated, portfolio</p>
+								<h4><a href="portfolio-details-obras.html">Sistema de Gestão de Obras - MCTESTP</a></h4>
+								<p>Sistema de Gestão - PHP, Framework Laravel & MySQL</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 all latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/p3.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/dsa-print3.PNG" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/p3.jpg" class="img-gal">
+								<a href="img/portfolio/dsa-print.PNG" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">female light</a></h4>
-								<p>Animated, portfolio</p>
+								<h4><a href="">DSA Consultant & Advisory</a></h4>
+								<p>DSA Website - Resposinve Design Website</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 all popular">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/p4.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/hs-print2.PNG" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/p4.jpg" class="img-gal">
+								<a href="img/portfolio/hs-print.PNG" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">fourth air</a></h4>
-								<p>Animated, portfolio</p>
+								<h4><a href="">HS - Homens de Segurança</a></h4>
+								<p>HS Website - Resposinve Design Website</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 all following">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/p6.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/financeiro_home.PNG" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/p5.jpg" class="img-gal">
+								<a href="img/portfolio/financeiro_home.PNG" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">together sign</a></h4>
-								<p>Animated, portfolio</p>
+								<h4><a href="portfolio-details-financeiro.html">Sistema de Gestão Financeira</a></h4>
+								<p>Sistema de Gestão - PHP & MySQL</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 all upcoming">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/p5.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/afromark.PNG" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/p6.jpg" class="img-gal">
+								<a href="img/portfolio/afromark.PNG" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">multiply fowl</a></h4>
-								<p>Animated, portfolio</p>
+								<h4><a href="">AFroMark Digital</a></h4>
+								<p>AFroMark Website - Resposinve Design Website</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 all upcoming following">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/p7.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/escolar-login.PNG" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/p7.jpg" class="img-gal">
+								<a href="img/portfolio/escolar-login.PNG" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">green heaven</a></h4>
-								<p>Animated, portfolio</p>
+								<h4><a href="portfolio-details-escolar.html">Sistema de Gestão Escolar</a></h4>
+								<p>Sistema de Gestão - PHP & MySQL</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 all following">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/p8.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/Screenshot_20201025-235007-1.jpg" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/p8.jpg" class="img-gal">
+								<a href="img/portfolio/Screenshot_20201025-235007-1.jpg" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
 								</a>
 							</div>
 							<div class="short_info">
-								<h4>fly male</h4>
-								<p>Animated, portfolio</p>
+								<h4>Website da Birdbyte</h4>
+								<p>Birdbyte- Resposinve Design Website</p>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4 col-md-6 all upcoming">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/p9.jpg" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/afromark-JM-xvii.png" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/p9.jpg" class="img-gal">
+								<a href="img/portfolio/afromark-JM-xvii.png" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a href="portfolio-details.html">season face</a></h4>
-								<p>Animated, portfolio</p>
+								<h4><a>Logotipo da AFroMark</a></h4>
+								<p>Design Gráfico</p>
 							</div>
 						</div>
 					</div>
