--- a/portfolio.html
+++ b/portfolio.html
@@ -349,16 +349,16 @@
 					<div class="col-lg-4 col-md-6 all upcoming">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/proposta-omz-imob.png" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/back-card-omz.png" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/proposta-omz-imob.png" class="img-gal">
+								<a href="img/portfolio/back-card-omz.png" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a>Logotipo Organizer's Imob</a></h4>
+								<h4><a href="img/portfolio/OMZ- Proposta-Branding.pdf" target="_blank">Branding Organizer's Imob</a></h4>
 								<p>Design Grafico</p>
 							</div>
 						</div>
