update - foto de perfil

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					</div>
 					<div class="col-lg-5">
 						<div class="home_right_img">
-							<img class="" src="img/banner/demo2.png" alt="">
+							<img class="" src="img/banner/Jmulungo.png" alt="">
 						</div>
 					</div>
 				</div>
