--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 					<div class="client-info">
 						<div class="d-flex mb-50">
 							<span class="lage">1 </span>
-							<span class="smll">Ano Experiencia no Mercado de Trabalho</span>
+							<span class="smll">Ano de Experiencia no Mercado de Trabalho</span>
 						</div>
 						<div class="call-now d-flex">
 							<div>
