correction - update portofolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -256,9 +256,9 @@
 					<div class="col-lg-4 col-md-6 all upcoming">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/quickclean-portifolio.png" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/dia-da-mulher-eco.jpg" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/quickclean-portifolio.png" class="img-gal">
+								<a href="img/portfolio/dia-da-mulher-eco.jpg" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
@@ -413,9 +413,9 @@
 					<div class="col-lg-4 col-md-6 all upcoming">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/quickclean-portifolio.png" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/ombea-feeback.png" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/quickclean-portifolio.png" class="img-gal">
+								<a href="img/portfolio/ombea-feeback.png" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
