--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="container">
 					<!-- Brand and toggle get grouped for better mobile display -->
-					<a class="navbar-brand logo_h" href="index.html"><img src="img/jm-logo-180.png" alt=""></a>
+					<a class="navbar-brand logo_h" href="index.html"><img src="img/100-icon-jm.png" alt=""></a>
 					<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
 					 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 						<span class="icon-bar"></span>
@@ -84,7 +84,7 @@
                         </div>
                         <div class="info_item">
                             <i class="lnr lnr-envelope"></i>
-                            <h6><a href="#">jacintomulungo.xvii@com</a></h6>
+                            <h6><a href="#">jacintomulungo.xvii@gmail.com</a></h6>
                             <p>Entre em contacto!</p>
                         </div>
                     </div>
