--- a/contact.html
+++ b/contact.html
@@ -115,14 +115,14 @@
                     </form>
                 </div>
             </div>
-            <div id="mapBox" class="mapBox" 
+            <!-- <div id="mapBox" class="mapBox" 
                 data-lat="40.701083" 
                 data-lon="-74.1522848" 
                 data-zoom="13" 
                 data-info="PO Box CT16122 Collins Street West, Victoria 8007, Australia."
                 data-mlat="40.701083"
                 data-mlon="-74.1522848">
-            </div>
+            </div> -->
         </div>
     </section>
     <!--================Contact Area =================-->
