correction - for filter

--- a/portfolio.html
+++ b/portfolio.html
@@ -108,7 +108,7 @@
 					</div>
 
 
-					<div class="col-lg-4 col-md-6 all upcoming">
+					<div class="col-lg-4 col-md-6 all popular">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
 								<img class="img-fluid w-100" src="img/portfolio/quickclean-portifolio.png" alt="">
@@ -197,7 +197,7 @@
 
 
 
-					<div class="col-lg-4 col-md-6 all upcoming">
+					<div class="col-lg-4 col-md-6 all popular">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
 								<img class="img-fluid w-100" src="img/portfolio/cenfoss-portifolio.png" alt="">
@@ -305,7 +305,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-lg-4 col-md-6 all upcoming">
+					<div class="col-lg-4 col-md-6 all latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
 								<img class="img-fluid w-100" src="img/portfolio/tlg1.png" alt="">
@@ -449,6 +449,23 @@
 					<div class="col-lg-4 col-md-6 all upcoming">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
+								<img class="img-fluid w-100" src="img/portfolio/ecopaisagem.jpg" alt="">
+								<div class="overlay"></div>
+								<a href="img/portfolio/ecopaisagem.jpg" class="img-gal">
+									<div class="icon">
+										<span class="lnr lnr-cross"></span>
+									</div>
+								</a>
+							</div>
+							<div class="short_info">
+								<h4><a>Eco Paisagem - Flyer Feira da plantas</a></h4>
+								<p>Design Gráfico</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-4 col-md-6 all upcoming">
+						<div class="portfolio_box">
+							<div class="single_portfolio">
 								<img class="img-fluid w-100" src="img/portfolio/white-logo-blue-bg.jpg" alt="">
 								<div class="overlay"></div>
 								<a href="img/portfolio/white-logo-blue-bg.jpg" class="img-gal">
@@ -465,7 +482,7 @@
 					</div>
 
 
-					<div class="col-lg-4 col-md-6 all upcoming">
+					<div class="col-lg-4 col-md-6 all latest">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
 								<img class="img-fluid w-100" src="img/portfolio/utter1.png" alt="">
@@ -554,7 +571,7 @@
 					</div>
 
 
-					<div class="col-lg-4 col-md-6 all upcoming">
+					<div class="col-lg-4 col-md-6 all popular">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
 								<img class="img-fluid w-100" src="img/portfolio/cenfoss.png" alt="">
