--- a/index.html
+++ b/index.html
@@ -391,28 +391,28 @@
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a>Ombea - Feedback Flyer</a></h4>
+								<h4><a>Quick Clean</a></h4>
 								<p>Design Gráfico</p>
 							</div>
 						</div>
 					</div>
-					<!-- <div class="col-lg-4 col-md-6 all upcoming">
+				<div class="col-lg-4 col-md-6 all upcoming">
 						<div class="portfolio_box">
 							<div class="single_portfolio">
-								<img class="img-fluid w-100" src="img/portfolio/sn.png" alt="">
+								<img class="img-fluid w-100" src="img/portfolio/on1.png" alt="">
 								<div class="overlay"></div>
-								<a href="img/portfolio/sn.png" class="img-gal">
+								<a href="img/portfolio/on1.png" class="img-gal">
 									<div class="icon">
 										<span class="lnr lnr-cross"></span>
 									</div>
 								</a>
 							</div>
 							<div class="short_info">
-								<h4><a>Plataforma de Noticias da SN</a></h4>
-								<p>WordPress Development</p>
+								<h4><a>OnExport - Social meida flyer & TriFold</a></h4>
+								<p>Design Gráfico</p>
 							</div>
 						</div>
-					</div> -->
+					</div> 
 				</div>
 			</div>
 		</div>
